--- a/Givemeturno/Base.lproj/Main.storyboard
+++ b/Givemeturno/Base.lproj/Main.storyboard
@@ -58,6 +58,14 @@
                                     </label>
                                 </subviews>
                             </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FsI-3O-MF1">
+                                <rect key="frame" x="64" y="518" width="192" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Clean Cookies improvement"/>
+                                <connections>
+                                    <action selector="cleanCookies:" destination="BYZ-38-t0r" eventType="touchUpInside" id="nDf-9h-zmE"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
